# Bot

./: README.md
DevLinux/: COPYING  ChangeLog.pre-0-17  HACKING  Makefile.am  Makefile.in  NEWS  README  README.I18N  README.Packagers  THANKS  TODO  aclocal.m4  autogen.sh  bot.desktop.in  bot.pc.in  bot_private.rc  build_spl.sh  build_spl.sh.bk  config.guess  config.h.in~  configure  configure.ac  ifast.desktop.in  ifast.pc.in  install-sh  list_file  missing  shell_build.sh  smartstreetlight.desktop.in  smartstreetlight.pc.in  smartstreetlight.spec.in  wscript
DevLinux/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
DevLinux/build_Debian_package_debug/: Makefile  config.h  config.status  libtool
DevLinux/build_Debian_package_debug/gtkdatabox/: Makefile
DevLinux/build_Debian_package_debug/gtkdatabox/.deps/: splchart-option.Po
DevLinux/build_Debian_package_debug/gtkdatabox/gtk/: Makefile
DevLinux/build_Debian_package_debug/gtkdatabox/splchart/: Makefile
DevLinux/build_Debian_package_debug/icons/: Makefile
DevLinux/build_Debian_package_debug/icons/16x16/: Makefile
DevLinux/build_Debian_package_debug/icons/32x32/: Makefile
DevLinux/build_Debian_package_debug/icons/light/: Makefile
DevLinux/build_Debian_package_debug/po/: Makefile.in
DevLinux/build_Debian_package_debug/src/: Makefile
DevLinux/build_Debian_package_debug/src/gsoap/: Makefile
DevLinux/build_Debian_package_release/: Makefile  config.status  libtool  smartstreetlight.desktop  smartstreetlight.pc  spl-client-0.0.1-503.x86_64.rpm  spl-client_0.0.1-501_x86_64.deb  spl-client_0.0.1-503_amd64.deb
DevLinux/build_Debian_package_release/gtkdatabox/: Makefile
DevLinux/build_Debian_package_release/gtkdatabox/.deps/: splchart-chart.Po  splchart-main.Po
DevLinux/build_Debian_package_release/icons/: Makefile
DevLinux/build_Debian_package_release/icons/16x16/: Makefile
DevLinux/build_Debian_package_release/icons/32x32/: Makefile
DevLinux/build_Debian_package_release/icons/light/: Makefile
DevLinux/build_Debian_package_release/po/: .intltool-merge-cache  Makefile
DevLinux/build_Debian_package_release/src/: Makefile
DevLinux/build_Debian_package_release/src/.deps/: main.Po  mapviewer.Po  smartstreetlight_admin_user.Po  smartstreetlight_admin_zone.Po  smartstreetlight_callback.Po  smartstreetlight_database.Po  smartstreetlight_dcu.Po  smartstreetlight_dcu_program_process.Po  smartstreetlight_error.Po  smartstreetlight_event_thread.Po  smartstreetlight_lcu.Po  smartstreetlight_line.Po  smartstreetlight_log.Po  smartstreetlight_login.Po  smartstreetlight_schedule.Po  smartstreetlight_server.Po  smartstreetlight_soap.Po  smartstreetlight_soap_thread.Po  smartstreetlight_sql.Po  smartstreetlight_ui_method.Po  smartstreetlight_user.Po  smartstreetlight_utils.Po  smartstreetlight_zone.Po  splchart-smartstreetlight_error.Po  splchart-smartstreetlight_soap.Po
DevLinux/build_Debian_package_release/src/gsoap/: Makefile
DevLinux/build_linux/: Makefile  config.h  config.status  libtool  smartstreetlight.desktop  smartstreetlight.pc  smartstreetlight.spec
DevLinux/build_linux/icons/: Makefile
DevLinux/build_linux/icons/16x16/: Makefile
DevLinux/build_linux/icons/32x32/: Makefile
DevLinux/build_linux/icons/light/: Makefile
DevLinux/build_linux/po/: Makefile  Makefile.in  POTFILES
DevLinux/build_linux/src/: Makefile
DevLinux/build_linux/src/.deps/: main.Po  mapviewer.Po  smartstreetlight_admin_user.Po  smartstreetlight_admin_zone.Po  smartstreetlight_callback.Po  smartstreetlight_database.Po  smartstreetlight_dcu.Po  smartstreetlight_dcu_program_process.Po  soapC.Po  (+17 more)
DevLinux/gtkdatabox/: Makefile.am  Makefile.in  chart.cpp  chart.h  main.cpp  main.h  option.cpp
DevLinux/gtkdatabox/examples/: Makefile.in
DevLinux/gtkdatabox/gtk/: Makefile.am  Makefile.in  gtkdatabox.c  gtkdatabox.h  gtkdatabox_bars.h  gtkdatabox_cross_simple.h  gtkdatabox_graph.c  gtkdatabox_graph.h  gtkdatabox_grid.c  gtkdatabox_grid.h  gtkdatabox_lines.h  gtkdatabox_markers.c  gtkdatabox_markers.h  gtkdatabox_offset_bars.h  gtkdatabox_points.h  gtkdatabox_regions.h  gtkdatabox_ruler.c  gtkdatabox_typedefs.h  gtkdatabox_xyc_graph.h  gtkdatabox_xyyc_graph.h
DevLinux/gtkdatabox/splchart/: Makefile.in
DevLinux/icons/: Makefile.am  Makefile.in
DevLinux/icons/16x16/: Makefile.am  Makefile.in
DevLinux/icons/32x32/: Makefile.am  Makefile.in
DevLinux/icons/light/: Makefile.am  Makefile.in  light_broken.xcf  light_off.xcf  light_on.xcf  light_selected.xcf
DevLinux/po/: POTFILES.in  ast.po  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gl.po  hu.po  intl_stats.sh  it.po  ja.po  kk.po  ko.po  lb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
DevLinux/slope/: LICENSE  Makefile  cmake_install.cmake  config.h  slope.cbp
DevLinux/slope/demos/: CMakeLists.txt  Makefile  cmake_install.cmake  test.c
DevLinux/slope/src/: CMakeLists.txt  Makefile  cmake_install.cmake
DevLinux/soap_resource/: autogen.sh  smartstreetlightService.h  stdsoap2.h
DevLinux/src/: Makefile.am  Makefile.in  SmartStreetLight.glade  SmartStreetLight.glade.bk  SmartStreetLight.glade.bkserver  SmartStreetLight.glade.bk~  SmartStreetLight.glade~  bot.glade  bot.glade.bk  bot.glade.bkserver  bot.glade~  botService.h  botStyle.css  bot_admin_user.cpp  bot_admin_user.h  bot_admin_zone.cpp  bot_admin_zone.h  bot_callback.cpp  bot_callback.cpp.bk  bot_callback.cpp.bk2  bot_callback.h  bot_callback.h.bk  bot_common.h  bot_database.cpp  bot_database.h  bot_db.cpp  bot_db.h  bot_dcu.cpp  bot_dcu.cpp.bk  bot_dcu.cpp.bk1  bot_dcu.h  bot_dcu.h.bk  bot_dcu.h.bk1  bot_dcu_log.h  bot_dcu_program_process.cpp  bot_dcu_program_process.h  bot_error.cpp  bot_error.h  bot_event_thread.cpp  bot_event_thread.h  (+116 more)
DevLinux/src/gsoap/: Makefile.am  Makefile.in  botService.h  botServiceSOAP.nsmap  smartstreetlightService.h  soapC.cpp  soapClient.cpp  soapH.h  soapStub.h  soapbotServiceSOAPProxy.h  soapsmartstreetlightServiceSOAPProxy.h  stdsoap2.cpp
(+259 files in other folders)
